# 2042_mcp_stats

./: .env  .env.example  .gitignore  Cargo.toml  DOCKER_SETUP.md  Dockerfile  Dockerfile.postgres  INIT_PROMPT.md  MIGRATION_SUMMARY.md  PLAN.md  PLAN_PROMPT.md  README.md  SCHEMA.md  docker-compose.yml  schema.sql
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.sqlx/: query-27f52794d13254277ec380a6793ad5c631183bfb29db3efc19fdb5d4a8769488.json  query-36dff7cb2ff61232fa9d6cb8490e7c6e162612021b3bc094235696277f0eb2f7.json  query-58b45de79e18f799d962402a741320cb333a38b15a320b19ce40bd101767984f.json  query-7d39d335c3942372eee86801e126318bacfb408c784a680c4ab94478ea6061cc.json  query-8b3306b3641d80037edf58877ac4784dd0dc886822d93db5e7280b442e406d98.json  query-9921e93bd51181ed03b4bd3badd3df9e96d97f39404bdc8ffc2d856fd6540da4.json
examples/: create_schema.rs  custom_config.rs  initialize_db.rs  initialize_db_embedded.rs
scripts/: docker-init.sh  init-database.ps1  init-database.sh  init_db.sh  prepare-sqlx.sh  setup-dev.ps1  start-db.ps1  start-db.sh  stop-db.ps1  stop-db.sh
src/: client.rs  debug.rs  error.rs  lib.rs  main.rs  process.rs  test_utils.rs
src/database/: manager.rs  migration.rs  mod.rs  schema.rs  table.rs
src/models/: config.rs  json.rs  mod.rs  weapon.rs
tests/: integration_tests.rs
