[package]
name = "bf2042_stats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bf2042-stats"
path = "src/main.rs"

[dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
tokio = { version = "1.46", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenvy = "0.15"
