[package]
name = "bf2042_stats"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bf2042-stats"
path = "src/main.rs"

[features]
default = ["database"]
database = ["sqlx"]

[dependencies]
# Database - make SQLx optional
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
    "uuid",
    "rust_decimal",
], optional = true }
tokio = { version = "1.46", features = ["full"] }

# Async/Streaming
futures = "0.3"

# Decimal precision
rust_decimal = { version = "1.35", features = ["serde"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Environment
dotenvy = "0.15"
