[dependencies]
bincode = "1.3"
sled = "0.34"
serde = { version = "1.0", features = ["derive"] }
rkyv = "0.8.10"
serde_json = "1.0.141"
rust_decimal = "1.37.2"
bimap = "0.6.3"
[package]
name = "bf2042_stats"
version = "0.1.0"
edition = "2021"
tokio = { version = "1.46", features = ["full"] }

# Async/Streaming
futures = "0.3"



# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
